changes to address CA-448: Alignment issues on sites/pi table

--- a/edrn/theme/browser/stylesheets/edrn-overlay.css
+++ b/edrn/theme/browser/stylesheets/edrn-overlay.css
@@ -114,6 +114,12 @@ table.listing th {
 	text-align:left;
 	font-weight:bold;
 }
+table.listing.sitesByType {
+
+}
+table.listing.sitesByType td.piLink {
+	width:25%;
+}
 
 #region-content {
 	border:solid 0px #ccc;
